# damdara

./: .gitignore  .npmignore  Cargo.toml  DEPLOYMENT.md  NPM_PUBLISH.md  README.md  README_NPM.md  README_ja.md  build-wasm.sh
.cargo/: config.toml
.github/workflows/: build_test.yml  create_pull_request.yml  create_tag.yml  deploy.yml  npm-publish.yml  release.yml  rust_test.yml  test.yml
ai_docs/: architecture.md  data-structure.md  directory-structure.md  implementation-tasks.md  requirement.md  tech-stack.md
docs/: README.md  index.html
examples/web/: README.md  app.js  style.css
src/: battle.rs  binary_utils.rs  constants.rs  growth_type.rs  lib.rs  load.rs  main.rs  message.rs  monster.rs  player.rs  raw_bits.rs  save.rs  string_utils.rs  wasm.rs
src/constants/: battle.rs  config.rs  item_weapon.rs  mod.rs  monster.rs  save_data.rs  spell.rs  status.rs  text.rs
src/input/: cli_input.rs  mod.rs  web_input.rs
src/output/: buffer_output.rs  cli_output.rs  mod.rs
src/traits/: message_output.rs  mod.rs  player_input.rs
src/utility/: mod.rs  monster_utils.rs  random_utils.rs  spell_utils.rs  status_utils.rs
