[package]
name = "damdara"
version = "0.8.3"
edition = "2024"
authors = ["Daisuke Takayama <info@webcyou.com>"]
description = "Dragon Quest Core Module, created in Rust."
license = "MIT"
repository = "https://github.com/retrodig/damdara"
homepage = "https://github.com/retrodig/damdara"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "damdara"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.0"
