[package]
name = "damdara"
version = "0.8.4"
edition = "2024"
authors = ["Daisuke Takayama <info@webcyou.com>"]
description = "Dragon Quest Core Module, created in Rust."
license = "MIT"
repository = "https://github.com/retrodig/damdara"
homepage = "https://github.com/retrodig/damdara"
readme = "README.md"
keywords = ["game", "dragon-quest", "wasm", "retro", "rpg"]
categories = ["game-engines", "wasm"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # cdylib for WASM, rlib for native

[[bin]]
name = "damdara"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }

# WASM support
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Optimize for WASM bundle size in release builds
[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
panic = "abort"        # Reduce binary size
strip = true           # Strip symbols

# wasm-pack metadata for npm package
[package.metadata.wasm-pack.profile.release]
wasm-opt = false       # Disable wasm-opt due to bulk memory compatibility issues
